<resources>
    <string name="app_name">Dice Roller 3</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <!-- Strings used for fragments for navigation -->
    <string name="roller_fragment_label">Roll Dice</string>
    <string name="history_fragment_label">Saved History</string>

    <!-- about dialog -->
    <string name="author">Alex Tetervak, Sheridan College, 2022</string>

    <!-- roller fragment -->
    <string name="history_button_label">History</string>
    <string name="roll_button_label">Roll Dice</string>
    <string name="save_button_label">Save</string>
    <string name="roll_the_dice">Roll The Dice</string>
    <string name="reset_button_label">Reset</string>
    <string name="action_save">Save</string>
    <string name="action_history">History</string>
    <string name="blank">&#160;</string>

    <string name="total_label">Total:</string>

    <!-- snack bar messages -->
    <string name="rolling_the_dice">Rolling the dice</string>
    <string name="dice_is_rolled">The dice is rolled!</string>
    <string name="saving_the_data">Saving the roll data</string>
    <string name="data_is_saved">The roll data is saved in the history.</string>
    <string name="nothing_to_save">There is nothing to save.</string>

    <!-- history fragment -->
    <plurals name="history_count">
        <item quantity="one">History Count: %1$d item</item>
        <item quantity="other">History Count: %1$d items</item>
    </plurals>
    <plurals name="history_total">
        <item quantity="one">History Total: %1$d point</item>
        <item quantity="other">History Total: %1$d points</item>
    </plurals>
    <string name="count_value">%1$d.</string>
    <string name="result_values">%1$d + %2$d + %3$d = %4$d</string>
    <string name="action_clear">Clear</string>
    <string name="delete_history_item">Delete History Item</string>
    <string name="die_image">die image</string>

</resources>